--- a/example/style.css
+++ b/example/style.css
@@ -3,7 +3,7 @@
  * 
  *
  * @license Use of this software requires acceptance of the Evaluation License Agreement. See LICENSE file.
- * @copyright Copyright © 2016-present Heidelberger Payment GmbH. All rights reserved.
+ * @copyright Copyright 2016-present Heidelberger Payment GmbH. All rights reserved.
  * @link  https://dev.heidelpay.de/PhpApi
  * @author  Jens Richter
  */
